# binance_week_scalper

./: .gitignore  README.md  alembic.ini  assets.json  assets.txt  debug.py  klines.json  main.py  manager.py  pyproject.toml  requirements.txt  requirments.txt  test.py  updater.py
alembic/: env.py
alembic/versions/: 1f8339c84df6_wtf.py  53b445860da0_tradepair_boolean_columns_default_.py  692df5172f30_reinit.py  831524c0d729_initial_migration.py  cc5c4bd16c6a_fix_swing_candle_link_fk.py  fdb0cba21e1b_fix_swing_pk.py
bot/: bot.py  config.py  control_bot.py  server.py
server/: server.py
server/api/: binance.py
server/db/: crud.py  engine.py  models.py
src/: server.py
src/controllers/: api.py  bot.py  db.py
src/db/: engine.py  models.py
src/utils/: logging.py  types.py  wrappers.py
tests/: db.py
updater/: config.py  server.py
updater/api/: binance.py
updater/db/: crud.py  engine.py  models.py
utils/: logging.py
